--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Heading",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon userModel.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/MarkGiddings202/CarGrail#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "knex": "^2.3.0",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0"
   }
 }
