--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Heading",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon userModel.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
